# CSC341-11

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/app/: CMakeLists.txt  chatapp.cpp  chatapp.hpp  main.cpp  mainwidget.cpp  mainwidget.hpp
src/app/data/: msg.hpp  msg_repo.hpp  msgrepo.hpp  user.cpp  user.hpp
src/app/event/: handler.hpp  msgevent.hpp  userevent.hpp
src/app/model/: appmodel.cpp  appmodel.hpp  chatmodel.cpp  chatmodel.hpp
src/app/net/: networkservice.cpp  networkservice.hpp
src/app/net/client/: msgrepo.cpp  msgrepo.hpp  networkclient.cpp  networkclient.hpp  userservice.cpp  userservice.hpp
src/app/net/factory/: clientfactory.cpp  clientfactory.hpp  networkfactory.hpp
src/app/net/packet/: base.hpp  dest.hpp  keepalive.hpp  msg.hpp  user.hpp
src/app/net/server/: networkserver.hpp  userservice.cpp  userservice.hpp
src/app/service/: user_service.cpp  user_service.hpp  userservice.cpp  userservice.hpp
src/app/ui/: mainview.hpp
src/app/ui/qt/: mainwidget.cpp  mainwidget.hpp  mainwindow.cpp  mainwindow.hpp  zbottombar.cpp  zbottombar.hpp  zsidebar.cpp  zsidebar.hpp  zuserbutton.cpp  zuserbutton.hpp
src/app/view/: appview.h
src/app/view/qt/: mainwindow.cpp  mainwindow.hpp  zbottombar.cpp  zbottombar.hpp  zsidebar.cpp  zsidebar.hpp  zuserbutton.cpp  zuserbutton.hpp
src/app/widgets/: mainview.hpp  mainwidget.cpp  mainwidget.hpp  zbottombar.cpp  zbottombar.hpp  zsidebar.cpp  zsidebar.hpp  zuserbutton.cpp  zuserbutton.hpp
src/app/widgets/msg/: zmessage.cpp  zmessagepane.cpp  zmessagepane.hpp
src/app/widgets/utility/: hline.cpp  (+2 more)
(+32 files in other folders)
